<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spriv</string>
    <string name="version">version:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_edit_accounts">Edit Accounts</string>
    <string name="welcome_title">WELCOME</string>
    <string name="welcome_marketing_title">SIMPLE, AUTOMATED, FAST AND SECURE</string>

    <!-- string name="welcome_marketing_content">Using Spriv\'s patented technology, users simply login as they normally do and Spriv authenticates the information in the background multiple times and in multiple ways without any additional action by the user. To test and create a new free ten-user account go to www.spriv.com and click on signup.</string -->
    <string name="welcome_marketing_content">Using Spriv 2FA you will not need to interact with your mobile phone every time you login, Spriv authentication occurs automatically in the backgound.</string>
    <string name="simple_fast_secured">SIMPLE, FAST AND SECURED</string>
    <string name="patents_page_text">US Patent Number 9,727,867\nUS Patent Number 9,033,225\nUS Patent Number 9,391,985\nUS Patent Number 8,770,477\nUS Patent Number 8,640,197\nUS Patent Number 8,370,909\nUS Patent Number 7,503,489\nUS Patent Number 7,832,636\nUS Patent Number 10,289,833\nUS Patent Number 10,645,072\nUS Patent Number 10,554,645\nUS Patent Number 10,521,786\nAustralia Patent number 2015202208\n\nMany other patents pending</string>
    <string name="about_page_text">Spriv is the only security company that offer automatic authentication solutions using the mobile phone without the need for manual user intervention.\n\nUsers love Spriv because it’s totally seamless, Spriv’s authentication works automatically in the background and requires no human intervention. Users simply login as usual or provide their username and password as they normally do and Spriv authenticates the information in the background multiple times and in multiple ways without any additional action by the user.\n\nSpriv transforms the mobile phone into an automatic second hardware verification tool. There is no need for any additional equipment. There is no need to interact with the mobile phone and there are no costly tokens to administer.\n\nSimply, Spriv is online, automatic and active invisible protection. Spriv provides security for both the user and the website provider during online transactions. After simple activation, every transaction runs seamlessly in the background.</string>
    <string name="automatic_2fa_title">Automatic 2FA</string>
    <string name="patents_title">Patents</string>
    <string name="get_started_title">Info and Tips</string>
    <string name="about_title">About</string>
    <string name="drawer_open">Spriv</string>
    <string name="scan_qr_add_user">QR Scan, Add User</string>
    <string name="feedback">Feedback</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_none"> </string>
    <string name="support_email_subject">Android App Feedback</string>
    <string name="support_email_content">Please provide your feedback:\n\n\nWe\'ve profiled your phone information below. It will help us figure out what went wrong if there was a problem.</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_bootstrap">BootstrapActivity</string>
    <string name="title_activity_add_account">Pairing</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_of_use">Terms of Use</string>
    <string name="title_legal_notice">Legal Notice</string>
    <string name="title_send_log">Send  log to Spriv</string>
    <string name="title_scan_qr">Scan QR Code</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="enetr_code">Enter 6 Digits Code</string>
    <string name="totp">TOTP</string>
    <string name="add_account_instrction">Please enter the six digits code as presented in Spriv\'s enabled site.\nThe code will be used to uniquely correlate your mobile phone with your username. To test, go to </string>
    <string name="demo_url">https://app.spriv.com/</string>
    <string name="check_login_notif_text">Authorize login</string>
    <string name="check_verification_notif_text">Autorize request</string>
    <string name="title_activity_check_login">Login Request</string>
    <string name="title_activity_check_verification">Verification Request</string>
    <string name="allow">ALLOW</string>
    <string name="always_allow">ALWAYS ALLOW</string>
    <string name="deny">DENY</string>
    <string name="network_message_cellular">Tip: Connect to WiFi for Automation and faster performance!</string>
    <string name="network_message_wifi">Your phone will automatically approve future requests from this location.</string>
    <string name="network_message_blank"></string>
    <string name="title_activity_totp">TOTP</string>
    <string name="remove_account">Remove account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="done">3 of 3 Done</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="invalid_code_message">Please enter the six digits number you received via SMS or web</string>
    <string name="invalid_code_title">Invalid pairing code</string>
    <string name="invalid_long_code_message">Please scan/click on valid code</string>
    <string name="invalid_long_code_title">Invalid pairing code</string>
    <string name="title_activity_auth_logins">Allowed Logins</string>
    <string name="title_allowed_logins">Allowed Logins</string>
    <string name="remove_login">Remove allowed login</string>
    <string name="no_logins_yet">No allowed logins yet</string>
    <!-- <string name="qr_code">Scan QR Code</string>-->
    <string name="qr_code">Please wait</string>
    <string name="or">OR</string>
    <string name="set_bath_path">Set base path</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="tips_title">Tips:</string>
    <string name="tips_intro">Ignite the fastest two factor authentication 2nd channel in the world:</string>
    <string name="tip1_content">1. Keep Sprivs App Open</string>
    <string name="tip2_content">2. Switch your Wi-Fi to "ON"</string>
    <string name="tip3_content">3. Confirm carrier reception</string>
    <string name="tip4_content">4. Keep your battery above 20%</string>
    <string name="fyi_title">For Your Information:</string>
    <string name="fyi1_content">By design, Spriv only uses minimal battery power and internet data transfer, the data transfer and battery are used only during authentication. Spriv is among the lowest battery usage of any 2FA method.</string>
    <string name="fyi2_content">B. Privacy: No user private data is transferred.</string>
    <string name="title_activity_next_steps">NextStepsActivity</string>
    <string name="title_activity_automatic_2FA">Automatic2FA</string>
    <string name="automatic_2fa_layout_title">Automated Login</string>
    <string name="automatic_2fa_subtitle">How Spriv\'s automated two factor authentication works:</string>
    <string name="automatic_2fa_body">Each time you allow a transaction via Wi-Fi the cell phone generates a unique wireless identifier using Spriv\'s patented technology. This wireless identifier acts as a fingerprint which is unique to the devices being authenticated and has precise 3D gelocation accuracy where the transaction took place. This revolutionary 2FA 2nd Channel allows future transactions who\'s fingerprint has already been approved to be automatically validated and securely approved without the need for subsequent user interaction. Automated transactions can occur in as little as 175 milliseconds! Yes that\'s righ, 2FA 2nd Channel, no user interaction and well below one second.</string>
    <string name="automatic_2fa_done">Done</string>

    <string name="admin_next_title_text">Next Steps: To test and create a new free account.</string>
    <string name="admin_next1_content">A. From your PC: Create a new company account. Go to http://spriv.com and click on “Signup”. Currently, access to Spriv’s management portal is compatible with the following browsers: Chrome, Explorer, Opera and Firefox.</string>
    <string name="admin_next2_content">B. Follow the new account instructions and pair your mobile phone with the new account.</string>
    <string name="admin_next3_content">C. Once pairing is completed, from your PC: logon to Spriv’s management portal in order configure your 2FA platform. Go to http://spriv.com and click on “Client Login”</string>
    <string name="admin_next4_content">D. From your PC: You can now send invitations to your users and start using 2FA via the management portal.</string>
    <string name="user_next_title_text">Users:</string>
    <string name="user_next1_content">Users: Spriv is a Two Factor Authentication platform that requires your System Administrator to first install Spriv on the server. If you are a regular user, please contact your system administrator for instructions. </string>

    <string name="adoptive_authentication">Adoptive risk based authentications is ON</string>

</resources>
