<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:spriv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.spriv.AccountsActivity" >

    <!-- item android:id="@+id/action_add_account"
          android:icon="@drawable/ic_new"
          android:title="@string/action_add_account"
          spriv:showAsAction="ifRoom"/-->
    <item android:id="@+id/action_edit_accounts"
          android:icon="@drawable/ic_edit"
          android:title="@string/action_edit_accounts" 
          spriv:showAsAction="ifRoom"/>
    <item android:id="@+id/action_done"
          android:icon="@drawable/ic_action_accept"
          android:title="@string/action_done"
          spriv:showAsAction="ifRoom" />
    <item android:id="@+id/action_qr_scan"
        android:icon="@drawable/icon_qr_scanner"
        android:title="@string/title_scan_qr"
        spriv:showAsAction="ifRoom" />

</menu>
