<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spriv.activity.WelcomeActivity" >

    
    <ImageView 
        android:id="@+id/power_by_spriv_image"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/powered_by_spriv"/>
    
    <LinearLayout
        android:id="@+id/get_started_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_above="@id/power_by_spriv_image"
        android:background="#1EC436" >
    <TextView
        android:id="@+id/get_started_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/done"
        android:gravity="center" 
        android:textSize="@dimen/xlarge_text_size"
        android:textColor="#FFFFFF"/>
    </LinearLayout>
    
    <ScrollView 
        android:layout_height="match_parent" 
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_above="@+id/get_started_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:gravity="left"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_next_title_text"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:width="250dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/admin_next1_text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/admin_next1_content"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="3dp"
            android:width="250dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:gravity="left" />

        <TextView
            android:id="@+id/admin_next2_text"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/admin_next2_content"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="3dp"
            android:width="250dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:gravity="left" />

        <TextView
            android:id="@+id/admin_next3_text"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/admin_next3_content"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="3dp"
            android:width="250dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:gravity="left" />

        <TextView
        android:id="@+id/user_next1_content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_next1_content"
          android:textSize="@dimen/large_text_size"
        android:layout_marginTop="6dp"
          android:gravity="center|center_vertical|center_horizontal"
          android:paddingLeft="5dp"
          android:paddingRight="5dp" />
     </LinearLayout>
    </ScrollView>
    
    
</RelativeLayout>
