<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spriv.activity.WelcomeActivity" >

    
    <ImageView 
        android:id="@+id/power_by_spriv_image"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:src="@drawable/powered_by_spriv"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    
    <LinearLayout
        android:id="@+id/get_started_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_above="@id/power_by_spriv_image"
        android:background="#1EC436" >
    <TextView
        android:id="@+id/get_started_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="2 of 3 Next"
        android:gravity="center" 
        android:textSize="@dimen/xlarge_text_size"
        android:textColor="#FFFFFF"/>
    </LinearLayout>
    
    <ScrollView 
        android:layout_height="match_parent" 
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView"
        android:layout_above="@+id/get_started_layout"></ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:weightSum="1"
        android:layout_alignTop="@+id/scrollView"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_alignStart="@+id/scrollView"
        android:layout_above="@+id/power_by_spriv_image">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_title"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_intro"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:width="250dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip1_content"
            android:gravity="left"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:width="230dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip2_content"
            android:gravity="start"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:width="230dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip3_content"
            android:gravity="start"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:width="230dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip4_content"
            android:gravity="start"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:width="230dp" />

        <TextView
        android:id="@+id/fyi_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:text="@string/fyi_title"
        android:textSize="@dimen/xxlarge_text_size"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fyi1_content"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="6dp"
            android:width="250dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="6dp"
            android:width="250dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />

    </LinearLayout>


</RelativeLayout>
