<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatic_2fa_layout_title"
        android:textSize="@dimen/large_text_size"
        android:layout_marginTop="45dp"
        android:gravity="center|center_vertical|center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/automatic_2fa_subtitle"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="@dimen/large_text_size"
        android:layout_marginTop="25dp"
        android:width="250dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <ScrollView
        android:layout_height="330dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_2fa_body"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="3dp"
            android:width="250dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:textColor="#7e7e7e"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_above="@id/power_by_spriv_image"
        android:background="#1EC436"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/get_started_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/automatic_2fa_done"
            android:gravity="center"
            android:textSize="@dimen/xlarge_text_size"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/powered_by_spriv"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="5dp" />

</LinearLayout>