<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.spriv.activity.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_page_text"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:id="@+id/serverBasePathEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_bath_path"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/poweredBySprivImageView"
                android:layout_width="143dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/powered_by_spriv" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/version_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/version_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/large_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
